# polylog

./: .auto_sync_config.json  .codecov.yml  .cursorrules  .gitignore  .gitmessage  .last_sync.txt  .mergify.yml  ARCHITECTURE_NOTES.md  AUTOMATED_TESTING_SETUP.md  CI_CD_SETUP.md  CLEANUP_SUMMARY.md  CURSOR_DEVELOPMENT_SETUP.md  Canvas3D.tsx  DESKTOP_APP_README.md  DESKTOP_IMPLEMENTATION_STATUS.md  DOCUMENTATION_AUDIT.md  ENHANCED_TESTING_GUIDE.md  EXECUTION_READY.md  FILE_MIGRATION_GUIDE.md  FULL_SYSTEM_INTEGRATION_PLAN.md  GITHUB_SETUP_GUIDE.md  Home.tsx  IMPLEMENTATION_COMPLETE.md  INSTALL.md  MIGRATION_GUIDE.md  NEXT_INTEGRATION_PLAN.json  POLYLOG6_ARCHITECTURE.md  PROJECT_STRUCTURE.md  PolygonPalette.tsx  PolygonSlider.tsx  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  RESTART_REQUIRED.md  SETUP_COMPLETE.md  SUMMARY.md  TESTING_GUIDE.md  TEST_SCOPE_EXPANSION_WORKFLOW.md  TEST_STATUS.md  TEST_VISUALIZATION_GUIDE.md  (+55 more)
.github/: dependabot.yml  pull_request_template.md
ALLDOCS/: canonical_estimator.py  constraint_solver.py  geometry3d.py  polygon_utils.py  stability_backlog.yaml  test_constraint_solver.py  test_engines.py  test_interaction_manager.py
ALLDOCS/physics/: CMakeLists.txt  determinism.h
ALLDOCS/render/: CMakeLists.txt  allocators.cpp  allocators.h  camera.h  frame_graph.h
ALLDOCS/render/core/engine/: determinism.cpp  determinism.h  main_loop.h
ALLDOCS/render/core/logging/: frame_logger.h
Code/: IMPLEMENTATION_COMPLETE.txt  MANIFEST.in  QUICK_FIX_CARD.txt  README.md  __init__.py  api_server.py  bvh3d.py  check_dependencies.py  collision_validator.py  continuous_exploration_engine.py  convergence_ascii_viewer.py  convergence_canonical_tracker.py  convergence_tracker.py  convergence_visualizer.py  demo_integrated_system.py  demo_library_integration.py  evaluator_cache_enhanced.py  example_tracking_integration.py  generator_protocol.py  interaction_manager.py  interactive_workspace.py  launch_gui.py  learning_engine.py  library_thumbnail_renderer.py  logging_config.py  main.py  managers.py  multilevel_cache.py  performance_integration.py  random_assembly_generator.py  run_integration_tests.py  scaler_database.py  settings_dialog.py  stable_library.py  symmetry_database.py  test_convergence_tracker.py  test_e2e_integration.py  test_generation_engine.py  test_optuna_integration.py  theme_manager.py  (+1 more)
Legacy/: CMakeLists_NEW.txt  api_server.py  canonical_integration.py  canonical_system_integration.py  convergence_interactive_menu.py  convergence_range_analyzer.py  convergence_tracker.py  demo_integrated_system.py  frontend_example.html  generator_protocol.py  grpc_server.py  integration_hooks.py  launch_gui.py  logging_config.py  main_qt5.py  performance_monitor.py  physics_simulator.py  professional_ui.py  pyproject.toml  random_assembly_generator.py  run_integration_tests.py  scipy_constraint_optimizer.py  setup.py  template_library.py  test_gui_integration.py  test_integration.py  test_phase2_phase3_integration.py  test_pyqt5_opengl.py  test_startup.py  theme_manager.py  visual_tracking.py
Legacy/core/: bvh3d.py
Legacy/gui/: __init__.py  app.py  main_window.py  polyform_adapter.py  viewport_qt5.py
Legacy/gui/panels/: library_panel.py
Legacy/tests/: minimal_generator.py  test_polyform_integration.py  test_polygon_range_slider.py
Legacy/tools/: analyze_polyforms.py
PolylogCore/: Dockerfile  requirements.txt
PolylogStructure and Science/: SYNESTHETIC_POLYFORM_COMPRESSION_FRAMEWORK.md
Properties/: PROJECT_OVERVIEW.md
Properties/ALLDOCS/render/core/: CMakeLists.txt
Properties/ALLDOCS/render/core/engine/: main_loop.cpp
Properties/ALLDOCS/render/core/logging/: frame_logger.cpp
archive/: backups_contents.txt  legacy_contents.txt  prune_candidates.txt  prune_log.txt  prune_pre_delete_report.txt  repo_dir_sizes.txt  repo_disk_inventory.txt
archive/Legacy/rust/: Cargo.toml
archive/Legacy/rust/src/: lib.rs
catalogs/: attachment_graph.json  lod_metadata.json
config/: monitoring.yaml
cursor/: plan.md  session-notes.md  tasks.md
docs/: ARCHITECTURE.md  ARCHITECTURE_UNIFIED.md  CANONICAL_INTEGRATION_SUMMARY.md  CODE_CLEANUP_ANALYSIS.md  CONSOLIDATED_REFERENCE.md  DELIVERY_CHECKLIST.md  DEVELOPMENT.md  DOCS.md  ENTRY_POINT_ARCHITECTURE.md  ENVIRONMENT_STATUS.md  EXECUTIVE_SUMMARY_THEORY.md  EXPANSION_ROADMAP.md  FILES_INVENTORY.md  FULL_INTEGRATION_SESSION.md  GAP_ANALYSIS_SUMMARY.md  GITKRAKEN_WORKFLOW_INTEGRATION.md  GUI_README.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_GUIDE.md  PHASE2_PROGRESS.md  PHASE3_IMPLEMENTATION.md  PRUNING_ACTION_PLAN.md  PRUNING_ANALYSIS.md  QUICK_REFERENCE.md  README.md  README_CONVERGENCE.md  ROADMAP.md  SYSTEM_VISION.md  THEORETICAL_ANALYSIS.md  TICKETS.md  USE_CASES_AND_APPLICATIONS.md  legacy_ui_reference.md
documentation/: IMPLEMENTATION_ROADMAP.md  OPTIMIZED_PHASE_2_PLAN.md  PROJECT_SCOPE_AND_BLOCKERS.md  SYSTEM_OPTIMIZATION_ANALYSIS.md  ZERO_BLOCKER_SUMMARY.md
gui/: app.py  assembly_manager.py  main_window.py  main_window_qt5.py  polyform_adapter.py
requirements/: conda.yaml
scripts/: BROWSER_COORDINATOR_README.md  LAUNCHER_README.md  auto_test.py  automated_test_pipeline.py  automated_test_suite.py  benchmark_simulation.py  browser_coordinator.py  build.py  check_integration.py  cleanup_processes.py  cleanup_repository.py  compute_attachment_matrix.py  dev.py  dev_integrated.py  (+44 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+694 files in other folders)
