[package]
name = "polylog6-desktop"
version = "1.0.0"
edition = "2021"

[lib]
name = "polylog6_desktop"
path = "src/lib.rs"

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.20", features = ["extension-module"] }

[build-dependencies]
tauri-build = { version = "1.0", features = [] }
