set(PHYSICS_SOURCES\n    determinism.h\n)\n\nadd_library(polylog_physics INTERFACE)\n\ntarget_include_directories(polylog_physics\n    INTERFACE\n        ${CMAKE_CURRENT_SOURCE_DIR}\n        ${CMAKE_CURRENT_SOURCE_DIR}/..\n)\n\ntarget_compile_definitions(polylog_physics\n    INTERFACE\n        POLYLOG_PHYSICS_ENGINE_JOLT=1\n)\n\ntarget_link_libraries(polylog_physics\n    INTERFACE\n        polylog_core\n)\n\n# Jolt integration would go here\n# find_package(Jolt REQUIRED)\n# target_link_libraries(polylog_physics INTERFACE Jolt::Jolt)\n