set(RENDER_SOURCES\n    frame_graph.h\n    allocators.cpp\n    camera.h\n    asset_loader.cpp\n)\n\nset(RENDER_HEADERS\n    frame_graph.h\n    allocators.h\n    camera.h\n    asset_loader.h\n)\n\nadd_library(polylog_render STATIC ${RENDER_SOURCES})\n\ntarget_include_directories(polylog_render\n    PUBLIC\n        ${CMAKE_CURRENT_SOURCE_DIR}\n    PRIVATE\n        ${CMAKE_CURRENT_SOURCE_DIR}/..\n)\n\ntarget_compile_definitions(polylog_render\n    PRIVATE\n        POLYLOG_RENDER_BACKEND_BGFX=1\n)\n\ntarget_link_libraries(polylog_render\n    PUBLIC\n        polylog_core\n        glm::glm\n        OpenGL::OpenGL\n)\n\nif(POLYLOG_BUILD_TESTS)\n    # Graphics visualization tests\n    add_executable(test_graphics_viz\n        ../tests/render/test_graphics_visualization.cpp\n    )\n    target_link_libraries(test_graphics_viz PRIVATE polylog_render gtest gtest_main)\n    add_test(NAME graphics_visualization COMMAND test_graphics_viz)\nendif()\n