[package]
name = "polylog6"
version = "0.1.0"
edition = "2021"

[lib]
name = "polylog6"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
rayon = "1.7"

[build-dependencies]
pyo3-build-config = "0.19"