set(CORE_SOURCES\n    engine/main_loop.cpp\n    engine/determinism.cpp\n    logging/frame_logger.cpp\n)\n\nset(CORE_HEADERS\n    engine/main_loop.h\n    engine/determinism.h\n    logging/frame_logger.h\n)\n\nadd_library(polylog_core STATIC ${CORE_SOURCES})\n\ntarget_include_directories(polylog_core\n    PUBLIC\n        ${CMAKE_CURRENT_SOURCE_DIR}\n)\n\ntarget_compile_definitions(polylog_core\n    PRIVATE\n        POLYLOG_DETERMINISM_ENABLED=$<BOOL:${POLYLOG_ENABLE_DETERMINISM}>\n        POLYLOG_VALIDATION_ENABLED=$<BOOL:${POLYLOG_ENABLE_VALIDATION}>\n)\n\ntarget_link_libraries(polylog_core\n    PUBLIC\n        glm::glm\n)\n\nif(POLYLOG_BUILD_TESTS)\n    # Core tests\n    add_executable(test_core_engine\n        ../tests/core/test_main_loop.cpp\n    )\n    target_link_libraries(test_core_engine PRIVATE polylog_core gtest gtest_main)\n    add_test(NAME core_engine COMMAND test_core_engine)\nendif()\n